# ai-smart-test-selector

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
data/: test_history.csv
src/ai_smart_test_selector/: main.py
src/ai_smart_test_selector/api/: main.py
src/ai_smart_test_selector/evaluation/: evaluate_model.py  visualize.py
src/ai_smart_test_selector/pipeline/: data.py  evaluate.py  train.py
src/api/: main.py
src/data/: generate_dataset.py
src/models/: ranking.py
src/ui/: app.py
tests/: conftest.py  test_feature_engineering.py  test_loader.py  test_ml_model.py  test_smoke.py
tests/smoke/: test_main.py
