[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-smart-test-selector"
version = "0.1.0"
description = "AI Smart Test Selector"
authors = [{name = "Sar-shalom Levi"}]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
